Fixed a fault that caused extra spacing to be shown above the URL label in the event tooltip.

--- a/src/calendar.js.scss
+++ b/src/calendar.js.scss
@@ -2702,7 +2702,6 @@ div.calendar-tooltip-event {
 
     div.url {
         color: blue;
-        display: inline-block;
 
         &:hover {
             cursor: pointer;
